objects/copado__Static_Code_Analysis_Result__c.object
<CustomObject>
    <fields>
        <fullName>copado__Details__c</fullName>
        <defaultValue>&apos;For details please click on the Static Code Analysis Result Summary button.&apos;</defaultValue>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Rules_Violated__c</fullName>
        <label>Rules Violated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Static Code Analysis Results</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>